Move MultipartAutoConfigurationTests to main code's module
See gh-46071